updating Mine mechnic to be owned by multible persons